# rust-backend

./: .env.example  Cargo.toml  Makefile.toml  Rustfmt.toml  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2018-11-27-203211_create_extension_citext/: down.sql
migrations/2018-11-27-203418_create_domain_email/: down.sql  up.sql
migrations/2018-11-27-203432_create_domain_nonempty-text/: down.sql  up.sql
migrations/2018-11-27-205316_create_schema_util/: down.sql  up.sql
migrations/2018-11-27-205332_create_function_set_created_at/: down.sql  up.sql
migrations/2018-11-27-205347_create_function_set_updated_at/: down.sql  up.sql
migrations/2018-11-27-205354_create_function_keep_created_at/: down.sql  up.sql
migrations/2018-11-27-205422_create_function_add_timestamps/: down.sql  up.sql
migrations/2018-11-27-205538_create_function_set_updated_by/: down.sql  up.sql
migrations/2018-11-27-205548_create_function_keep_created_by/: down.sql  up.sql
migrations/2018-11-27-205610_create_function_add_audits/: down.sql  up.sql
migrations/2018-11-27-212202_create_table_users/: up.sql
src/: app.rs  db.rs  error.rs  main.rs  schema.rs
src/auth/: actors.rs  handlers.rs  mod.rs  models.rs  users.rs
src/books/: mod.rs
