[package]
name = "rust-backend"
version = "0.1.0"
authors = ["thebearingedge <contact@timdav.is>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
uuid = { version = "0.6.5", features = ["serde", "v4"] }
actix = "0.7.7"
actix-web = "0.7.14"
dotenv = "0.13.0"
listenfd = "0.3.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
futures = "0.1.25"
num_cpus = "1.8.0"
r2d2 = "0.8.3"
chrono = { version = "0.4.6", features = ["serde"] }
bcrypt = "0.2.1"
